# bitmex-delta-neutral

./: .gitignore  CLAUDE.md  Makefile  PLAN.md  TODOS.md  pyproject.toml  requirements.txt
.claude/: settings.json
config/: .env.example  settings.toml
dashboard/: app.py
deploy/: bitmex-engine.service
engine/: main.py  market_data.py  order_manager.py  position_tracker.py  risk_guard.py
engine/control/: server.py
engine/db/: models.py  repository.py
engine/exchange/: base.py  bitmex.py
engine/strategies/: base.py  cash_and_carry.py  delta_check.py  funding_harvest.py  smoke_test.py  smoke_test_eth.py  two_leg.py
funding_analysis/: app.py  exchange.py  normalize.py  simulator.py  symbols.py  sync.py
funding_analysis/db/: models.py  repository.py
funding_analysis/exchanges/: binance.py  bitmex.py  hyperliquid.py
scripts/: backfill_funding.py  ctl.py
tests/: test_contract_qty.py  test_fifo_pnl.py  test_funding_analysis_normalize.py  test_funding_analysis_simulator.py  test_funding_analysis_symbols.py  test_order_manager.py  test_position_tracker.py  test_risk_guard.py  test_strategies.py
trading_analysis/: CLAUDE.md  app.py  exchange.py  fifo.py  sync.py
trading_analysis/.claude/: settings.json
trading_analysis/db/: models.py  repository.py
