[project]
name = "bitmex-delta-neutral"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    # Core async
    "asyncio-throttle>=1.0",
    "aiohttp>=3.9",
    "websockets>=12.0",
    # Exchange connectivity
    "ccxt>=4.5",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    # Config
    "python-dotenv>=1.0",
    # Dashboard
    "streamlit>=1.40",
    "protobuf>=7.0",
    "pandas>=2.2",
    "plotly>=5.22",
    # Notifications
    "python-telegram-bot>=21.3",
    # Utilities
    "structlog>=24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=engine --cov-report=term-missing --cov-fail-under=0"

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["engine"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
# E/W: pycodestyle  F: pyflakes  I: isort  UP: pyupgrade (enforce modern syntax)
select = ["E", "F", "I", "W", "UP"]
# E501 is redundant with line-length; UP007 (X | Y) is noisy across the codebase
ignore = ["E501", "UP007"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true   # start permissive; tighten per-module over time
warn_unused_ignores = true
warn_return_any = false
